# rust-first-steps

./: .gitignore  README.md
branches/src/: main.rs
clean-rocket-blog/: Cargo.toml
clean-rocket-blog/api/: Cargo.toml
clean-rocket-blog/api/src/: lib.rs  post_handler.rs
clean-rocket-blog/application/: Cargo.toml
clean-rocket-blog/application/src/: lib.rs
clean-rocket-blog/application/src/post/: create.rs  delete.rs  mod.rs  publish.rs  read.rs
clean-rocket-blog/domain/: Cargo.toml
clean-rocket-blog/domain/src/: models.rs
clean-rocket-blog/infrastructure/: Cargo.toml  diesel.toml
clean-rocket-blog/infrastructure/src/: lib.rs
clean-rocket-blog/shared/: Cargo.toml
clean-rocket-blog/shared/src/: lib.rs  response_models.rs
collections/strings/src/: main.rs
collections/vectors/src/: main.rs
concepts/branches/src/: main.rs
concepts/fibonacci/src/: main.rs
concepts/generics/src/: main.rs
concepts/hello_world/: README.md
concepts/if-let/src/: main.rs
concepts/loops/src/: main.rs
concepts/modules/src/: lib.rs
concepts/rectangles/src/: main.rs
concepts/slices/src/: main.rs
concepts/structs/src/: main.rs
concepts/threads/src/: main.rs
concepts/traits/src/: main.rs
enums/src/: main.rs
functions/src/: main.rs
guessing_game/: README.md
guessing_game/src/: main.rs
hello/: 404.html  hello.html
hello/src/: lib.rs  main.rs
matches/src/: main.rs
minigrep/: poem.txt
minigrep/src/: lib.rs  main.rs
rectangles/src/: main.rs
slices/src/: main.rs
structs/src/: main.rs
variables/src/: main.rs
(+3 files in other folders)
