[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.4", features = ["postgres"] }
serde = { version = "1.0.210", features = ["derive"] }
